Fix alignment issues with buttons, fix height and width issues that alignment fix caused, add max events on calender to keep grid a static size

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,8 @@ body{
     font-family: 'Roboto', sans-serif;
 }
 
+
+
 .App{
     display: flex;
     flex-direction: column;
@@ -82,11 +84,15 @@ h1{
 button{
     width: max-content;
     border-radius: 1rem;
-    padding: 15px;
+    margin: 10px 0;
+    padding: 5px;
     background-color: hsl(211, 87%, 25%);
     color: hsl(35, 0%, 100%);
     font-size: medium;
-    font-weight: bold;
     cursor: pointer;
+}
+
+input, textarea {
+    font-family: 'Roboto', sans-serif;
 }
 
